fix: check  semantic release

--- a/src/components/Lexical/ToolbarPlugin.css
+++ b/src/components/Lexical/ToolbarPlugin.css
@@ -18,6 +18,7 @@
     justify-content: space-between;
     overflow-x: auto;
     min-height: 40px;
+    max-height: 40px;
   }
   .toolbar-templates-lexical-left {
     display: flex;
