fix: add sideEffects in the the packege

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,3 @@
+/* scr/style.css */
 @import "./components/Lexical/EditLexical.css";
 @import "./components/Lexical/css/button.css";
-/* Добавь сюда все остальные нужные CSS-файлы */
